--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,3 +5,6 @@
 @import url('./hero-favorites.css');
 @import url('./hero-home.css');
 @import url('./popular.css');
+@import url('./modal-order.css');
+@import url('./modal-rating.css');
+@import url('./modal-recipe.css');
