--- a/src/partials/favorit-images.html
+++ b/src/partials/favorit-images.html
@@ -1,24 +1,10 @@
 <div class="container">
   <div class="kz-btn-favorite-recipes">
-    <button type="button" class="">All categories</button>
-    <button type="button" class="">Beef</button>
-    <button type="button" class="">Breakfast</button>
-    <button type="button" class="">Chicken</button>
-    <button type="button" class="">Dessert</button>
-    <button type="button" class="">Goat</button>
-    <button type="button" class="">Miscellaneous</button>
-    <button type="button" class="">Pasta</button>
-    <button type="button" class="">Pork</button>
-    <button type="button" class="">Seafood</button>
-    <button type="button" class="">Side</button>
+    <button type="button" class="btn-all">All categories</button>
+
   </div>
   <div class="kz-favorite-recipes">
     <!-- add to JS ====================-->
-    <!-- add background -->
-    <!-- add "favorite" icon -->
-    <p></p>
-    <p></p>
-    <!-- add ranking and stars -->
-    <button class="kz-btn-see-recipe">See recipe</button>
+        <!-- add "favorite" icon -->
   </div>
 </div>
