--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,12 +3,12 @@
         <nav class="yv-header-navigation">
           <ul class="yv-header-list list">
             <li class="yv-header-item">
-              <a class="yv-header-link-home link" href="./index.html"
+              <a class="yv-header-link-home link" href="../index.html"
                 >Home</a
               >
             </li>
             <li class="yv-header-item">
-              <a class="yv-header-link-favorites link" href="#">Favorites</a>
+              <a class="yv-header-link-favorites link" href="../favorites.html">Favorites</a>
             </li>
             <li class="yv-header-item-logo">
               <a href="" class="yv-header-logo link"
@@ -17,7 +17,7 @@
             </li>
           </ul>
           <div class="shopping list">
-            <a href="tel:+11(000)111-11-11">
+            <a href="tel:+38 073 000000">
               <svg class="shopping-icon" width="24" height="24">
                 <use href="./img/symbol-defs.svg#icon-shopping"></use>
                 </svg></a>
@@ -30,10 +30,10 @@
           </svg>
         </button>
       </div>
-      <div class="yv-mobil-menu is-open js-menu-container " data-menu >
+      <div class="yv-mobil-menu is-open js-menu-container " >
         <div class="yv-mobil-menu-conteiner">
           <div class="yv-mobil-menu-top">
-            <button class="yv-mobil-menu-close-btn js-close-menu" data-menu-close>
+            <button class="yv-mobil-menu-close-btn js-close-menu">
               <svg class="yv-mobil-menu-close-icon" width="32" height="32">
                 <use href="./img/symbol-defs.svg#icon-x"></use>
               </svg>
