--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,212 +1,272 @@
-:root {
-  --white-color: #ffffff;
-  --main-color: #050505;
-  --accent-color: #9bb537;
-  --star-color: #eea10c;
-  --boody-bg: #f8f8f8;
-  --description-font-color: rgba(5, 5, 5, 0.8);
-  --trans: 250ms linear;
-  --dark-boody-bg: #161616;
-  --dark-description-font-color: rgba(255, 255, 255, 0.8);
+/* -------------------------------------MOBILE */
+
+@keyframes mobileMenu {
+    0% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+.header {
+    padding-top: 20px;
+    padding-bottom: 93px;
+
+    display: flex;
+    align-items: center;
 }
 
-.yv-header {
-  padding: 20px;
-}
-.yv-header-navigation {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-}
-.yv-header-logo {
-  color: var(--main-color);
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 1.1;
-}
-.yv-header-logoone {
-  color: var(--accent-color);
-  text-align: center;
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 1.1;
-}
-.yv-header-item-logo {
-  margin-right: 100px;
-}
-.yv-header-hookup {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.header-wrap {
+    display: flex;
+    gap: 14px;
+    margin-left: auto;
+    align-items: center;
 }
 
-.yv-header-menu {
-  background-color: transparent;
-  border: none;
+.nav-header-list {
+    display: none;
+}
+
+.header-logo {
+color: var(--main-color);
+font-size: 16px;
+font-weight: 600;
+line-height: 1.12;
+letter-spacing: -0.64px;
+
+}
+
+.header-logo-acent {
+color: var(--accent-color);
+}
+
+.header-icon-order-basket-btn,
+.header-icon-burger-btn {
+    background-color: transparent;
+    border: none;
+}
+
+.header-icon-burger {
+    stroke: var(--main-color);
+    transition: stroke var(--trans);
+}
+
+.header-icon-burger:hover,
+.header-icon-burger:focus {
+    stroke: var(--accent-color);
+}
+
+.header-icon-order-basket {
+    stroke: var(--main-color);
+    fill: var(--boody-bg);
+    transition: stroke var(--trans);
+}
+
+.header-icon-order-basket:hover,
+.header-icon-order-basket:focus {
+    stroke: var(--accent-color);
+}
+
+.mobile-menu {
+    
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 60%;
+    height: 100%;
+    /* max-height: 812px; */
+    z-index: 1000;
+    background-color: var(--accent-color);
+    opacity: 0;
+    pointer-events: none;
    
 }
-.yv-header-item {
-  display: none;
-}
-.yv-menu-icon {
-  stroke: var(--main-color);
-}
-.yv-icon-switch {
-  display: none;
-  
-}
-.yv-icon-menu {
-  padding: 20px;
-}
-.shopping-icon {
-  margin-right: 8px;
-  stroke: var(--main-color);
-  fill: var(--boody-bg);
-}
 
-/* mobil-menu */
-.yv-mobil-menu {
-  position: fixed;
-  width: 60%;
-  height: 100%;
-  z-index: 1000;
-
-  top: 0;
-  right: 0;
-  background-color: var(--accent-color);
-  transition: var(--trans);
-
-}
-.yv-mobil-menu {
-  padding: 20px;
-}
-.yv-mobil-menu > .yv-mobil-menu-conteiner {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: auto;
-}
-.yv-mobil-list {
-  margin-top: 148px;
-}
-
-.yv-mobil-item {
-  text-align: center;
-  margin-top: 16px;
-  margin-bottom: 16px;
-
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.11;
-  color: var(--white-color);
-}
-
-.yv-mobil-home {
-  color: var(--white-color);
-  font-family: 'Inter', sans-serif;
-  font-size: 12px;
-  font-weight: 500;
-}
-.yv-mobil-favorites {
-  color: var(--boody-bg);
-  font-family: 'Inter', sans-serif;
-  font-size: 12px;
-  font-weight: 400;
-}
-
-.yv-mobil-menu-close-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-  background-color: transparent;
-  stroke: var(--boody-bg);
-  border: none;
-
-  cursor: pointer;
-}
-
-.is-open {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-@media screen and (min-width: 420px) {
-  .yv-header-item-logo {
-    margin-right: 182px;
+.mobile-menu.is-open {
+    animation: mobileMenu var(--trans);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
   }
+
+.js-menu-container {
 }
-@media screen and (min-width: 768px) {
-  .conteiner {
-    max-width: 768px;
-  }
-  .yv-mobil-menu {
-    display: none;
-  }
-  .yv-header {
-    padding: 30px;
-  }
-  .yv-header-hookup {
-    justify-content: flex-end;
-  }
-  .yv-header-list {
+.container {
+}
+.mobile-menu-container {
+    height: 100%;
     display: flex;
-  }
-  .yv-header-item {
-    display: block;
-    margin-left: 16px;
-  }
+    flex-direction: column;
+    justify-content: space-between;
 
-  .yv-header-item-logo {
-    margin-right: 217px;
-    margin-left: 203px;
-  }
-
-  .yv-icon-menu {
-    display: none;
-
-  }
-  .yv-header-link-home {
-    color: var(--accent-color);
-    font-family: Inter;
-    font-size: 12px;
-
-    font-weight: 500;
-  }
-  .yv-header-link-favorites {
-    color: var(--main-color);
-    font-family: Inter;
-    font-size: 12px;
-
-    font-weight: 400;
-  }
-  .yv-icon-switch {
-    display: block;
-    
-  }
-  .yv-menu-icon {
-    stroke: none;
-    
-    width: 60px;
-    height: 56px;
-    /* border-radius: 60px;
-    box-shadow: 7px 5px 15px 0px rgba(160, 158, 160, 0.6); */
-  }
+    position: relative;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
+.mobile-menu-close-btn {
+    position: absolute;
+    right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    width: 28px;
+    height: 28px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+.js-close-menu {
+}
+.mobile-menu-close-icon {
+    stroke: var(--boody-bg);
+    width: 32px;
+    height: 32px;
+    flex-shrink: 0;
+}
+.list {
+}
+.icon-mobile-menu {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.mobile-menu-home {
+    text-align: center;
+    color: var(--white-color);
+}
+.mobile-menu-favorites {
+    color: var(--white-color);
+}
+
+
+.checkbox-ios,
+.checkbox-ios-desktop {
+	display: inline-block;    
+	height: 28px;    
+	line-height: 28px;  
+	margin-right: 10px;      
+	position: relative;
+	vertical-align: middle;
+	font-size: 14px;
+	user-select: none;	
+}
+.checkbox-ios .checkbox-ios-switch,
+.checkbox-ios-desktop .checkbox-ios-switch {
+	position: relative;	
+	display: inline-block;
+	box-sizing: border-box;			
+	width: 46px;	
+	height: 20px;
+	border: 1px solid rgba(0, 0, 0, .1);
+	border-radius: 25%/50%;	
+	vertical-align: top;
+	background: #cecdcd;
+	transition: .2s;
+}
+.checkbox-ios .checkbox-ios-switch:before,
+.checkbox-ios-desktop .checkbox-ios-switch:before {
+	content: '';
+	position: absolute;
+	/* top: 1px;
+	left: 1px;	 */
+	display: inline-block;
+	width: 18px;	
+	height: 18px;
+	border-radius: 50%;
+	background: white;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+	transition: .15s;
+}
+.checkbox-ios input[type=checkbox],
+.checkbox-ios-desktop input[type=checkbox]
+ {
+	display: block;	
+	width: 0;
+	height: 0;	
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+}
+.checkbox-ios input[type=checkbox]:not(:disabled):active + .checkbox-ios-switch:before,
+.checkbox-ios-desktop input[type=checkbox]:not(:disabled):active + .checkbox-ios-switch:before {
+	box-shadow: inset 0 0 2px rgba(0, 0, 0, .3);
+}
+.checkbox-ios input[type=checkbox]:checked + .checkbox-ios-switch,
+.checkbox-ios-desktop input[type=checkbox]:checked + .checkbox-ios-switch {
+	background: var(--accent-color);
+}
+.checkbox-ios input[type=checkbox]:checked + .checkbox-ios-switch:before,
+.checkbox-ios-desktop input[type=checkbox]:checked + .checkbox-ios-switch:before {
+	transform:translateX(28px);
+}
+ 
+/* Hover */
+.checkbox-ios input[type="checkbox"]:not(:disabled) + .checkbox-ios-switch,
+.checkbox-ios-desktop input[type="checkbox"]:not(:disabled) + .checkbox-ios-switch  {
+	cursor: pointer;
+	border-color: transparent;
+}
+.checkbox-ios-desktop {
+    display: none;
+}
+ 
+/* -----------------------------------------------------------------------TABLET AND DESKTOP */
+
+@media screen and (min-width: 768px) {
+
+    .header {
+        
+    }
+
+.header-icon-burger-btn {
+    display: none;
+}
+
+.checkbox-ios-desktop {
+    display: inline-block;
+}
+
+.nav-header-list {
+    display: flex;
+    gap: 16px;
+}
+
+.header-logo {
+    margin-left: auto;
+    margin-right: auto;
+
+    font-size: 18px;
+    line-height: 20px;
+letter-spacing: -0.72px;
+}
+
+.header-wrap {
+margin-left: 0;
+}
+
+.header-icon-order-basket {
+    margin-right: 18px;
+}
+.header-link-nav {
+    font-size: 12px;
+}
+
+}
+
 @media screen and (min-width: 1200px) {
-  .conteiner {
-    max-width: 1280px;
-  }
-  .yv-header {
-    padding: 40px 100px;
-  }
-  .yv-header-item-logo {
-    margin-right: 400px;
-    margin-left: 390px;
-  }
+
+    .header-icon-order-basket{
+        margin-right: 25px;
+    }
+
 }
