--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,3 +8,4 @@
 @import url('./modal-order.css');
 @import url('./modal-rating.css');
 @import url('./modal-recipe.css');
+@import url('./favorit-images.css');
