--- a/src/css/modal-order.css
+++ b/src/css/modal-order.css
@@ -72,6 +72,7 @@ backdrop.is-hidden {
 }
 
 .modal {
+  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -109,7 +110,7 @@ backdrop.is-hidden {
 label {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .modal-input-labels {
