--- a/src/css/modal-order.css
+++ b/src/css/modal-order.css
@@ -49,21 +49,22 @@ backdrop.is-hidden {
   position: absolute;
   top: 16px;
   right: 16px;
+  margin-left: auto;
   cursor: pointer;
   background-color: transparent;
   border-color: transparent;
-  border: none;
+  /* border: none; */
 
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: center;
   width: 24px;
-  height: 24px;
+  height: 24px; */
 
-  transition-property: color, background-color, visibility;
+  /* transition-property: color, background-color, visibility;
   transition-duration: 350ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1); */
 }
 
 .modal-button-close-svg {
@@ -72,11 +73,11 @@ backdrop.is-hidden {
 }
 
 .modal {
-  display: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  /* display: none; */
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  
   width: 440px;
   height: 632px;
   background-color: #fff;
@@ -107,7 +108,7 @@ backdrop.is-hidden {
   padding-bottom: 40px;
 }
 
-label {
+.modal label {
   display: flex;
   flex-direction: column;
   /* width: 100%; */
@@ -161,18 +162,15 @@ label {
   display: flex;
   width: 360px;
   height: 48px;
+  border: transparent;
   padding: 14px 162px;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
   border-radius: 15px;
   background: #9bb537;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: #f8f8f8;
-  font-family: Inter;
-  font-size: 14px;
-  font-style: normal;
   font-weight: 500;
-  line-height: normal;
 }
