--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
 @import url('./filters.css');
 @import url('./header.css');
 @import url('./hero-favorites.css');
+@import url('./favorites-recipes.css');
 @import url('./hero-home.css');
 @import url('./popular.css');
 @import url('./modal-order.css');
