--- a/src/partials/favorit-images.html
+++ b/src/partials/favorit-images.html
@@ -1,10 +1,8 @@
 <div class="container">
-  <div class="kz-btn-favorite-recipes">
-    <button type="button" class="btn-all">All categories</button>
-
-  </div>
-  <div class="kz-favorite-recipes">
-    <!-- add to JS ====================-->
-        <!-- add "favorite" icon -->
+  <div class="kz-favorite-section">
+    <div class="kz-btn-favorite-recipes">
+      <button type="button" class="btn-all">All categories</button>
+    </div>
+    <div class="kz-favorite-recipes"></div>
   </div>
 </div>
