--- a/src/css/modal-order.css
+++ b/src/css/modal-order.css
@@ -47,8 +47,8 @@ backdrop.is-hidden {
 
 .modal-button-close {
   position: absolute;
-  top: 16px;
-  right: 16px;
+  top: 10px;
+  right: 10px;
   margin-left: auto;
   cursor: pointer;
   background-color: transparent;
@@ -78,8 +78,8 @@ backdrop.is-hidden {
   flex-direction: column;
   position: relative;
   
-  width: 440px;
-  height: 632px;
+  width: 335px;
+  /* height: 582px; */
   background-color: #fff;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -88,7 +88,7 @@ backdrop.is-hidden {
   transition-duration: 350ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 40px;
+  padding: 28px 20px;
 }
 
 .contacts-input-form {
@@ -133,7 +133,7 @@ backdrop.is-hidden {
 /* CSS copied */
 .input-style {
   display: flex;
-  width: 360px;
+  width: 100%;
   height: 48px;
   padding: 14px 169px 14px 18px;
   align-items: flex-start;
@@ -149,7 +149,7 @@ backdrop.is-hidden {
 
 .textarea-style {
   display: flex;
-  width: 360px;
+  width: 100%;
   height: 100px;
   padding: 14px 169px 14px 18px;
   align-items: flex-start;
@@ -159,18 +159,26 @@ backdrop.is-hidden {
 }
 
 .modal-button-send {
-  display: flex;
-  width: 360px;
+  /* display: flex; */
+  width: 100%;
   height: 48px;
   border: transparent;
-  padding: 14px 162px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+  /* padding: 14px 162px; */
+  /* justify-content: center;
+  align-items: center; */
+  /* gap: 10px; */
   /* flex-shrink: 0; */
   border-radius: 15px;
   background: #9bb537;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
   color: #f8f8f8;
   font-weight: 500;
+}
+
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 440px;
+    padding: 40px;
+  }
 }
