--- a/src/css/modal-rating.css
+++ b/src/css/modal-rating.css
@@ -1,4 +1,4 @@
-.add-rating-backdrop {
+/* .add-rating-backdrop {
   display: none;
   position: fixed;
   top: 0;
@@ -8,7 +8,7 @@
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms;
   z-index: 11;
-}
+} */
 .add-rating-modal {
   position: relative;
   padding: 20px;
