--- a/src/css/modal-rating.css
+++ b/src/css/modal-rating.css
@@ -10,11 +10,11 @@
   z-index: 11;
 } */
 .add-rating-modal {
-  position: relative;
+  /* position: relative;
   padding: 20px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   background-color: #fff;
   max-width: 335px;
   border-radius: 15px;
