--- a/src/partials/popular.html
+++ b/src/partials/popular.html
@@ -1,4 +1,21 @@
-<section class="popular-recipes-block">
-    <h2 class="popular-recipes-heading">Popular recipes</h2>
-    <ul class="list popular-recipes-list js-popular-list"></ul>
-  </section>
+<div class="container popular-container">
+  <h2 class="popular-heading">popular recipes</h2>
+  <div class="popular-box"></div>
+
+<!-- <div class="popular-holder">
+<div class="popular-wrapper">
+  <img src="" alt="">
+  <div class="popular-box-text">
+      <h3 class="popular-name"></h3>
+      <p class="popular-description"></p>
+  </div>
+</div>
+<div class="popular-wrapper">
+  <img src="" alt="">
+  <div class="popular-box">
+      <h3 class="popular-name"></h3>
+      <p class="popular-description"></p>
+  </div>
+</div>
+</div> -->
+</div>
