--- a/src/css/filters.css
+++ b/src/css/filters.css
@@ -1,504 +1,364 @@
-.search-form {
-  position: relative;
+.filters-container {
+  padding-top: 62px;
 }
-
-.icon-search {
-  width: 18px;
-  height: 18px;
-
-  position: absolute;
-  left: 18px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.place-for-search {
-  border: solid 1px gray;
-  border-radius: 15px;
-  width: 335px;
-  height: 45px;
-  font-weight: 500;
-  background-color: var(--boody-bg);
-  outline: none;
-}
-
-.name-of-fields {
-  padding-bottom: 8px;
-  color: rgba(5, 5, 5, 0.5);
-  font-size: 12px;
-  left: 20px;
-}
-
-input[type='text'] {
-  padding-left: 48px; /* Отступ внутри поля ввода */
-}
-
-.name-of-field:active {
-  color: black;
-}
-
-.krest-search {
-  width: 15px;
-  height: 15px;
-  stroke: rgba(5, 5, 5, 1);
-  stroke-width: 4;
-  position: absolute;
-  right: 16px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.search-krest-position {
-  position: relative;
-  display: inline-block;
-}
-
-/* second and third buttons */
-
-.filtr-two-buttons {
+.filters-form {
   display: flex;
-  margin-top: 14px;
+  flex-direction: column;
+  gap: 36px;
+}
+.filters-icon {
+  position: absolute;
+  top: 30%;
+  left: 18px;
+  stroke: rgba(5, 5, 5, 0.50);;
+}
+.filters-label-search {
+  position: relative;
+}
+.filters-span-search {
+  position: absolute;
+  top: -20px;
+
+  color: rgba(5, 5, 5, 0.50);
+  font-size: 12px;
+font-weight: 500;
+line-height: 1.16;
+}
+.filters-input{
+  padding: 14px 48px;
+  width: 100%;
+  border-radius: 15px;
+border: 1px solid rgba(5, 5, 5, 0.20);
+
+
+  color: rgba(5, 5, 5, 0.50);
+font-weight: 500;
+line-height: 1.28;
+
+}
+.filters-box-time-area {
+  display: flex;
   gap: 14px;
 }
-
-/* /////////dropdown-design */
-
-.dropdown-design-area-time {
+.filters-label-time {
   position: relative;
-  display: inline-block;
 }
-
-.buttons-design-time {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-
-  width: 160px;
-  padding-left: 18px;
-  height: 46px;
-
-  border: solid 1px gray;
-  border-radius: 15px;
-  background-color: var(--boody-bg);
-  color: rgba(5, 5, 5, 0.5);
-  outline: none;
-  font-weight: 500;
-
-  position: relative;
-  display: inline-block;
-}
-
-.buttons-design-area {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-
-  width: 160px;
-  padding-left: 18px;
-  height: 46px;
-
-  border: solid 1px gray;
-  border-radius: 15px;
-  background-color: var(--boody-bg);
-  color: rgba(5, 5, 5, 0.5);
-  outline: none;
-  font-weight: 500;
-
-  position: relative;
-  display: inline-block;
-}
-
-.strelka-spisok {
-  fill: rgba(5, 5, 5, 0.5);
-  width: 10px;
-  height: 8px;
-  stroke: rgba(5, 5, 5, 0.4);
-  stroke-width: 4;
+.filters-span-time {
   position: absolute;
-  left: 100px;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  top: -20px;
 
-.strelka-spisok-area {
-  fill: rgba(5, 5, 5, 0.5);
-  width: 10px;
-  height: 8px;
-  stroke: rgba(5, 5, 5, 0.4);
-  stroke-width: 4;
-  position: absolute;
-  left: 120px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.krest-area {
-  width: 15px;
-  height: 15px;
-  stroke: rgba(5, 5, 5, 1);
-  stroke-width: 4;
-  position: absolute;
-  right: 16px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-/* four button */
-
-.name-of-fields-ingrid {
-  margin-top: 14px;
-  padding-bottom: 8px;
-  color: rgba(5, 5, 5, 0.5);
+  color: rgba(5, 5, 5, 0.50);
   font-size: 12px;
-  left: 20px;
+font-weight: 500;
+line-height: 1.16;
 }
-
-.button-ingrid-pos {
-  position: relative;
-  display: inline-block;
-}
-
-.button-ingrid {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-
-  width: 188px;
-  height: 46px;
-
-  padding-left: 18px;
-
-  border: solid 1px gray;
+.filters-select-time{
+  /* max-height: 160px;
+   overflow-y: auto; */
+  min-width: 160px;
+  padding: 14px 18px;
   border-radius: 15px;
-  background-color: var(--boody-bg);
-  color: rgba(5, 5, 5, 0.5);
-  outline: none;
+border: 1px solid rgba(5, 5, 5, 0.20);
+  
+  color: rgba(5, 5, 5, 0.50);
   font-weight: 500;
+  line-height: 1.28;
 }
-
-.button-ingrid option:checked {
-  color: black;
+.filters-label-area {
+  position: relative;
 }
-
-.strelka-ingrid {
-  fill: rgba(5, 5, 5, 0.5);
-  width: 10px;
-  height: 8px;
-  stroke: rgba(5, 5, 5, 0.4);
-  stroke-width: 4;
+.filters-span-area {
   position: absolute;
-  right: 18px;
-  top: 50%;
-  transform: translateY(-50%);
+  top: -20px;
+
+  color: rgba(5, 5, 5, 0.50);
+  font-size: 12px;
+font-weight: 500;
+line-height: 1.16;
+}
+.filters-select-area{
+min-width: 160px;
+padding: 14px 18px;
+border-radius: 15px;
+border: 1px solid rgba(5, 5, 5, 0.20);
+
+  color: rgba(5, 5, 5, 0.50);
+  font-weight: 500;
+  line-height: 1.28;
+}
+.filters-select-area::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
 }
 
-.krest-ingrid {
-  width: 15px;
-  height: 15px;
-  stroke: rgba(5, 5, 5, 1);
-  stroke-width: 4;
+.filters-select-area::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+background: rgba(5, 5, 5, 0.18);
+}
+
+.filters-label-ingredients {
+  position: relative;
+}
+.filters-span-ingredients {
   position: absolute;
-  right: 16px;
-  top: 50%;
-  transform: translateY(-50%);
+  top: -20px;
+  color: rgba(5, 5, 5, 0.50);
+  font-size: 12px;
+font-weight: 500;
+line-height: 1.16;
+}
+.filters-select-ingredients {
+min-width: 188px;
+padding: 14px 18px;
+border-radius: 15px;
+border: 1px solid rgba(5, 5, 5, 0.20);
+
+  color: rgba(5, 5, 5, 0.50);
+  font-weight: 500;
+  line-height: 1.28;
 }
 
-/* JS CLASS */
-
-.changer-color {
-  color: black;
+.filters-select-ingredients::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
 }
 
-/* reset-kreuz */
+.filters-select-ingredients::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+background: rgba(5, 5, 5, 0.18);
+}
 
-.reset-button-position {
+.filters-reset-btn {
   display: flex;
-  align-items: center;
-  margin-left: 235px;
-  margin-top: 14px;
-  margin-bottom: 20px;
+  margin-left: auto;
+  margin-bottom: 14px;
+  flex-wrap: nowrap;
+  max-width: 125px;
+  padding: 0;
+  border: none;
+  background-color: inherit;
 }
+.filters-icon-reset {
+margin-right: 4px;
 
-.green-kreuz {
+  stroke: var(--accent-color);
   width: 16px;
   height: 16px;
-  cursor: pointer;
+}
+.filters-btn-span {
+  color: rgba(5, 5, 5, 0.50);
+font-size: 12px;
+font-weight: 500;
+line-height: 1.33;
 }
 
-.name-of-kreuz {
-  color: rgba(5, 5, 5, 0.5);
-  font-size: 12px;
-  left: 20px;
-  cursor: pointer;
+
+.filters-box-parent {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
-
-/* cards */
-
-.card-container {
+.filters-dox-cards {
+  margin-top: 14px;
+}
+.filters-box-child {
   height: 335px;
   width: 335px;
-  margin-bottom: 24px;
+  padding: 16px;
+  border-radius: 8px;
+  
+}
+.filters-icon-heart{
+margin-left: auto;
+margin-bottom: 176px;
+display: block;
+
+fill: transparent;
+stroke: var(--boody-bg);
+width: 22px;
+height: 22px;
+}
+.filters-icon-heart-toggle {
+  fill: var(--boody-bg);
 }
 
-.cards-with-recept {
-  border-radius: 15px;
+.filters-title-recipe {
+  margin-bottom: 8px;
+overflow-y: scroll;
+height: 18px;
+  color: var(--boody-bg);
+font-weight: 600;
+font-size: 14px;
+line-height: 1.28;
+text-transform: uppercase;
+}
+.filters-title-recipe::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
 }
 
-.img-background-cards {
-  position: absolute;
+.filters-title-recipe::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+background: rgba(5, 5, 5, 0.18);
+}
+.filters-description-recipe {
+  margin-bottom: 16px;
+height: 32px;
+  overflow-y: scroll;
+color: var(--boody-bg);
+/* text-overflow: ellipsis;
+whitespace: nowrap; */
+font-size: 12px;
+line-height: 1.33;
+}
+.filters-description-recipe::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
 }
 
-.elements-on-cards {
-  position: relative;
+.filters-description-recipe::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+background: rgba(5, 5, 5, 0.18);
 }
-
-/* TOP PART CARD */
-.card-favorits-heart {
-  fill: rgba(248, 248, 248, 0.5);
-  width: 18.33px;
-  height: 16.35px;
-  float: right;
-  margin: 16px 16px 0 0;
-  stroke: rgba(248, 248, 248, 0.5);
-  stroke-width: 2;
-}
-
-/* TEXT PART CARD */
-
-.cards-title {
-  padding: 214px 0 8px 18px;
-  color: #f8f8f8;
-  font-weight: 600;
-  font-size: 14px;
-}
-
-.cards-text-container {
-  width: 303px;
-  height: 32px;
-  margin-left: 16px;
-}
-
-.cards-descript {
-  font-weight: 400;
-  font-size: 12px;
-  color: #f8f8f8;
-}
-
-/* BOTTOM PART CARD */
-
-.cards-bottom-part {
+.filters-rating-wrap {
   display: flex;
-  margin: 16px 0 0 16px;
+  /* justify-content: center; */
   align-items: center;
 }
-
-.card-numb-rait {
-  font-weight: 500;
-  font-size: 14px;
-  color: #f8f8f8;
+.filters-rating-recipe {
   margin-right: 4px;
+
+color: var(--boody-bg);
+font-weight: 500;
+line-height: 1.28;
 }
 
-.raiting-stars {
-  width: 13px;
-  height: 13px;
-  fill: #eea10c;
-  margin-right: 4px;
+.filters-icon-rating-recipe-1 {
+  fill: #EEA10C;
+  width: 18px;
+  height: 18px;
 }
-
-.raiting-order-row {
-  display: flex;
+.filters-icon-rating-recipe-2 {
+  fill: #EEA10C;
+  width: 18px;
+  height: 18px;
 }
-
-.card-button {
-  margin: 0 0 0 98px;
-  width: 89px;
+.filters-icon-rating-recipe-3 {
+  fill: #EEA10C;
+  width: 18px;
+  height: 18px;
+}
+.filters-icon-rating-recipe-4 {
+  fill: #EEA10C;
+  width: 18px;
+  height: 18px;
+}
+.filters-icon-rating-recipe-5 {
+  fill: #EEA10C;
+  width: 18px;
+  height: 18px;
+}
+.filters-btn-recipe {
+  margin-left: auto;
+  min-width: 89px;
   height: 31px;
+  /* padding: 8px 14px; */
+  background-color: var(--accent-color);
+  color: var(--boody-bg);
+font-size: 12px;
+font-weight: 500;
   border-radius: 8px;
-  border: none;
-  text-decoration: none;
-  font-size: 12px;
-  font-weight: 500;
-  background-color: #9bb537;
-  color: #f8f8f8;
+  border-color: transparent;
+}
+.filters-btn-recipe::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
+}
+.filters-btn-recipe::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+background: rgba(5, 5, 5, 0.18);
+}
+@media screen and (min-width: 768px) {
+  .filters-form {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      column-gap: 16px;
+      margin-right: auto;
+      margin-left: auto;
+  }
+  .filters-input{
+      width: 278px;
+  }
+  .filters-select-time {
+      width: 125px;
+  }
+  .filters-select-area{
+      width: 141px;
+  }
+  .filters-select-ingredients {
+      width: 188px;
+  }
+  .filters-reset-btn {
+      /* position: absolute;
+      transform: translate(-50%, -200%); */
+      /* top: 15px; */
+      /* top: 0; */
+      right: 0;
+      margin: 0 0 14 auto;
+      height: 16px;
+  }
+.filters-box-parent {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: auto;
+  gap: 16px;
+}
+.filters-dox-cards {
+}
+.filters-box-child {
+  /* position: absolute; */
+  transform:translateX(34px);
+  right: 50%;
+  height: 264px;
+  width: 240px;
+  padding: 16px;
+  border-radius: 8px;  
+}
+.filters-icon-heart{
+  margin-bottom: 105px;
+}
+.filters-main-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  align-items: end;
+}
+.filters-icon-rating-recipe-1,
+.filters-icon-rating-recipe-2,
+.filters-icon-rating-recipe-3,
+.filters-icon-rating-recipe-4,
+.filters-icon-rating-recipe-5 {
+width: 14px;
+height: 14px;
 }
 
-/* .book-card:nth-last-child(-n + 3) {
-  display: none;
-} */
 
-@media only screen and (min-width: 768px) {
-  /* .book-card:nth-last-child(-n + 3) {
-    display: inline;
-  } */
-  /* 
-  .book-card:last-child {
-    display: none;
-  } */
 
-  /* filter tile */
+.filters-box-time-area {
+  /* position: absolute; */
+  /* display: block; */
+}
+.filters-label-time {}
 
-  .name-of-fields {
-    font-size: 14px;
-  }
-
-  .name-of-fields-ingrid {
-    font-size: 14px;
-  }
-
-  .buttons-design-time {
-    font-size: 16px;
-  }
-
-  .search-krest-position {
-    font-size: 16px;
-  }
-
-  .buttons-design-area {
-    font-size: 16px;
-  }
-
-  .button-ingrid {
-    font-size: 16px;
-  }
-
-  /* OTHER */
-
-  .book-card {
-    height: 264px;
-    width: 240px;
-    margin: 0 16px 16px 0;
-    justify-content: left;
-    display: inline-block;
-  }
-
-  .card-container {
-    height: 264px;
-    width: 240px;
-    margin: 0 16px 16px 0;
-    display: inline-block;
-    justify-content: left;
-  }
-
-  .cards-with-recept {
-    height: 264px;
-    width: 240px;
-    margin: 0 16px 16px 0;
-    display: inline-block;
-    justify-content: left;
-  }
-
-  .pirog {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: left;
-  }
-
-  .img-background-cards {
-    display: inline-block;
-    justify-content: left;
-  }
-
-  .reset-button-position {
-    margin-left: 391px;
-  }
-
-  .place-for-search {
-    width: 278px;
-    height: 45px;
-  }
-
-  .time-button-down {
-    display: none;
-  }
-
-  .buttons-design-time {
-    width: 125px;
-  }
-
-  .buttons-design-area {
-    width: 141px;
-  }
-
-  /* card bottom*/
-
-  .cards-title {
-    padding: 140px 0 8px 18px;
-  }
-
-  .cards-text-container {
-    width: 208px;
-    height: 32px;
-  }
-  .cards-descript {
-    width: 208px;
-    height: 32px;
-    line-height: 16px;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    white-space: normal;
-  }
-  .card-button {
-    margin: 0 0 0 15px;
-  }
-
-  .star-linie {
-    width: 72px;
-  }
+.filters-container {
+  display: flex;
+  /* flex-wrap: nowrap; */
+  /* flex-direction: column; */
+}
+.new-container {
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
 }
 
-.raiting-stars {
-  margin-right: 1px;
-}
 
-@media only screen and (min-width: 1200px) {
-  /* .book-card:last-child {
-    display: inline;
-  } */
 
-  .book-card {
-    height: 287px;
-    width: 250px;
-    margin: 0 16px 32px 0;
-    justify-content: left;
-    display: inline-block;
-  }
 
-  .card-container {
-    height: 287px;
-    width: 250px;
-    margin: 0 16px 32px 0;
-    display: inline-block;
-    justify-content: left;
-  }
-
-  .cards-with-recept {
-    height: 287px;
-    width: 250px;
-    margin: 0 16px 32px 0;
-    display: inline-block;
-    justify-content: left;
-  }
-
-  .book-card:nth-child(3n) {
-    margin-right: 0;
-  }
-
-  .card-container:nth-child(3n) {
-    margin-right: 0;
-  }
-
-  .cards-with-recept:nth-child(3n) {
-    margin-right: 0;
-  }
-
-  .sizes-desktop {
-    width: 782px;
-  }
-
-  .reset-button-position {
-    justify-content: right;
-  }
 }
