--- a/src/css/popular.css
+++ b/src/css/popular.css
@@ -1,133 +1,97 @@
-.popular-recipes-block {
-    width: 332px;
-    margin-top: 39px;
-  }
-  
-.popular-recipes-heading {
-    color: var(--main-color);
+.popular-container {
+    padding-top: 40px;
+    padding-bottom: 62px;
+}
+.popular-heading {
+margin-bottom: 20px;
+
     font-size: 18px;
-    font-weight: 600;
-    line-height: 1.33;
-    text-transform: uppercase;
-    margin-bottom: 20px;
+font-weight: 600;
+line-height: 1.33;
+text-transform: uppercase;
 }
-
-.recip-item:nth-child(n+3) {
-    display: none;
-}
-
-.recip-item:not(:last-child) {
-    margin-bottom: 24px;
-}
-
-.recip-item {
+.popular-wrapper {
     display: flex;
     gap: 16px;
-
-    cursor: pointer;
+    height: 67px;
+    overflow: hidden;
 }
-
-.recip-img {
+.popular-wrapper img {
     width: 64px;
     height: 64px;
-    border-radius: 15%;
+    border-radius: 10px;
 }
+.popular-box {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 
-.recip-heading {
-    color: var(--main-color);
-    font-size: 14px;
+}
+.popular-name {
+margin-bottom: 8px;
+overflow-y: scroll;
+height: 18px;
+font-size: 12px;
     font-weight: 600;
-    line-height: 1.29;
-    text-transform: uppercase;
-    margin-bottom: 8px;
+line-height: 1.28;
+text-transform: uppercase;
+}
+.popular-name::-webkit-scrollbar {
+    width: 8px; /* Ширина скроллбара */
+  }
 
-    overflow-wrap: normal;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  .popular-name::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+background: rgba(5, 5, 5, 0.18);
+  }
+.popular-holder {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+.popular-description {
+    height: 41px;
+    overflow-y: scroll;
+color: rgba(5, 5, 5, 0.80);
+text-overflow: ellipsis;
+/* white-space: normal; */
+font-size: 12px;
+line-height: 1.33;
 }
 
-.recip-short-descr {
-    overflow: hidden;
-    color: var(--description-font-color);
-    text-overflow: ellipsis;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.33;
+.popular-description::-webkit-scrollbar {
+    width: 8px; /* Ширина скроллбара */
+  }
+  .popular-description::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+background: rgba(5, 5, 5, 0.18);
+  }
 
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+
+  @media screen and (min-width: 768px) {
+    .popular-container {
+        padding: 0;
+    }
+.popular-wrapper{
+
+    width: 176px;
 }
-
-
-@media screen and (min-width: 768px) {
-    .popular-recipes-block {
-        width: 176px;
-        margin-top: 64px;
-    }
-
-    .recip-item:nth-child(n+3) {
-        display: flex;
-    }
-
-    .recip-item:not(:last-child) {
-        margin-bottom: 16px;
-    }
-
-    .recip-item {
-        width: 100%;
-        display: flex;
-        gap: 8px;
-        
-        cursor: pointer;
-    }
-
-    .recip-img {
-        width: 48px;
-        height: 48px;   
-    }
-
-    .recip-short-descr {
-        font-size: 10px;
-
-        -webkit-line-clamp: 3;
-    }
+.filters-form {
+    margin-left: 32px;
 }
+.filters-main-box {
 
-@media screen and (min-width: 1200px) {
-    .popular-recipes-block {
-        width: 235px;
-    }
-
-
-    .popular-recipes-heading { 
-        font-size: 24px;
-        line-height: 1.16;
-        text-transform: uppercase;
-        margin-bottom: 32px;
-    }
-
-    .recip-item:not(:last-child) {
-        margin-bottom: 32px;
-    }
-        
-    .recip-item {
-        gap: 16px;  
-    }
-
-    .recip-img {
-        width: 64px;
-        height: 64px;
-    }
-
-    .recip-short-descr {
-        font-size: 10px;
-        font-weight: 400;
-        line-height: 1.4;    
-    }
 }
+.popular-wrapper img {
+    width: 48px;
+    height: 48px;
+}
+.popular-heading {
+    margin-bottom: 32px;
+}
+.popular-description {
+    font-size: 10px;
+    
+}
+  }
 
