--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -1,100 +1,82 @@
-<div class="container">
-  <div class="sizes-desktop">
-    <!-- first buttons -->
-    <div>
-      <h3 class="name-of-fields">Search</h3>
-      <div class="search-krest-position">
-        <form>
-          <div class="search-form">
-            <input
-              type="text"
-              class="place-for-search"
-              name="place-for-search"
-              id="place-for-search"
-              placeholder="Enter Text"
-              autocomplete="off"
-            />
-
-            <svg class="icon-search">
+<div class="container filters-container">
+  <div class="filters-main-box">
+  <form class="filters-form" action="">
+      <label class="filters-label-search" for="search"><span class="filters-span-search">Search</span>
+          <svg class="filters-icon" width="18" height="18">
               <use href="../img/symbol-defs.svg#icon-search"></use>
-            </svg>
-
-            <svg
-              class="krest-search"
-              id="cross-icon-search"
-              style="display: none"
-            >
-              <use href="../img/symbol-defs.svg#icon-krest-two"></use>
-            </svg>
-          </div>
-        </form>
-      </div>
-
-
-      <!-- second button -->
-
- 
-
-      
-        <div class="time-button-top">
-          <h3 class="name-of-fields">Time</h3>
-          <div class="dropdown-design-area-time">
-            <select
-              class="buttons-design-time filter-list-time"
-              id="dropdownTime"
-            ></select>
-            <svg class="strelka-spisok" id="arrow-time">
-              <use href="../img/symbol-defs.svg#icon-strelka"></use>
-            </svg>
-            <svg class="krest-area" id="cross-icon-time" style="display: none">
-              <use href="../img/symbol-defs.svg#icon-krest-two"></use>
-            </svg>
-          </div>
-        </div>
-     
-        <!--  third button -->
-        <div>
-          <h3 class="name-of-fields">Area</h3>
-          <div class="dropdown-design-area-time">
-            <select
-              class="buttons-design-area filter-list-area"
-              id="dropdownArea"
-            ></select>
-            <svg class="strelka-spisok-area" id="arrow-area">
-              <use href="../img/symbol-defs.svg#icon-strelka"></use>
-            </svg>
-            <svg class="krest-area" id="cross-icon-area" style="display: none">
-              <use href="../img/symbol-defs.svg#icon-krest-two"></use>
-            </svg>
-          </div>
-        </div>
-      </div>
-
-      <!-- fourth button -->
-      <div>
-        <h3 class="name-of-fields-ingrid">Ingredients</h3>
-        <div class="button-ingrid-pos">
-          <select class="button-ingrid filter-list" id="dropdown"></select>
-          <svg class="strelka-ingrid" id="arrow-icon">
-            <use href="../img/symbol-defs.svg#icon-strelka"></use>
           </svg>
-          <svg class="krest-ingrid" id="cross-icon" style="display: none">
-            <use href="../img/symbol-defs.svg#icon-krest-two"></use>
-          </svg>
-        </div>
-      </div>
-
-      <!-- reset all button -->
-
-      <div class="reset-button-position" id="resetButton">
-        <svg class="green-kreuz">
-          <use href="../img/symbol-defs.svg#icon-x-1"></use>
-        </svg>
-        <p class="name-of-kreuz">Reset the filter</p>
-      </div>
-
-      <!-- CARDS -->
-      <div class="pirog"></div>
-    </div>
+          <input class="filters-input" type="text" id="search" name="search" placeholder="Enter Text">
+      </label>
+      <div class="filters-box-time-area">
+      <label class="filters-label-time" for="time"><span class="filters-span-time">Time</span>
+          <select class="filters-select-time" name="time" id="time">
+              <option value="5">5 min</option>
+  <option value="10">10 min</option>
+  <option value="15">15 min</option>
+  <option value="20">20 min</option>
+  <option value="25">25 min</option>
+  <option value="30">30 min</option>
+  <option value="35">35 min</option>
+  <option value="40">40 min</option>
+  <option value="45">45 min</option>
+  <option value="50">50 min</option>
+  <option value="55">55 min</option>
+  <option value="60">60 min</option>
+  <option value="65">65 min</option>
+  <option value="70">70 min</option>
+  <option value="75">75 min</option>
+  <option value="80">80 min</option>
+  <option value="85">85 min</option>
+  <option value="90">90 min</option>
+  <option value="95">95 min</option>
+  <option value="100">100 min</option>
+  <option value="105">105 min</option>
+  <option value="110">110 min</option>
+  <option value="115">115 min</option>
+  <option value="120">120 min</option>
+          </select>
+      </label>
+      <label class="filters-label-area" for="area"><span class="filters-span-area">Area</span>
+          <select class="filters-select-area" name="area" id="area"></select>
+      </label>
   </div>
+      <label class="filters-label-ingredients" for="ingredients"><span class="filters-span-ingredients">Ingredients</span>
+          <select class="filters-select-ingredients" name="ingredients" id="ingredients"></select>
+      </label>
+     
+  </form>
+
+  <div class="filters-dox-cards">
+       <button class="filters-reset-btn"><svg class="filters-icon-reset">
+          <use href="../img/symbol-defs.svg#icon-cross"></use>
+      </svg><span class="filters-btn-span">Reset the filter</span></button>
+      <div class="filters-box-parent"></div>
+      <!-- <div class="filters-box-child">
+          <svg class="filters-icon-heart">
+              <use href="../img/symbol-defs.svg#icon-heart"></use>
+          </svg>
+          <h2 class="filters-title-recipe"></h2>
+          <p class="filters-description-recipe"></p>
+          <div class="filters-rating-wrap">
+          <p class="filters-rating-recipe"></p>
+          <svg class="filters-icon-rating-recipe-1">
+              <use href="../img/symbol-defs.svg#icon-star"></use>
+          </svg>
+          <svg class="filters-icon-rating-recipe-2">
+              <use href="../img/symbol-defs.svg#icon-star"></use>
+          </svg>
+          <svg class="filters-icon-rating-recipe-3">
+              <use href="../img/symbol-defs.svg#icon-star"></use>
+          </svg>
+          <svg class="filters-icon-rating-recipe-4">
+              <use href="../img/symbol-defs.svg#icon-star"></use>
+          </svg>
+          <svg class="filters-icon-rating-recipe-5">
+              <use href="../img/symbol-defs.svg#icon-star"></use>
+          </svg>
+          <button class="filters-btn-recipe" type="button">See recipe</button>
+      </div>
+      </div> -->
+  </div>
+</div>
 </div>
