--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -50,7 +50,14 @@
        <button class="filters-reset-btn"><svg class="filters-icon-reset">
           <use href="../img/symbol-defs.svg#icon-cross"></use>
       </svg><span class="filters-btn-span">Reset the filter</span></button>
-      <div class="filters-box-parent"></div>
+      <div class="filters-box-parent">
+        <!-- <div class="no-results">
+            <svg class="no-results-icon">
+                <use href="./img/symbol-defs.svg#icon-nothing"></use>
+            </svg>
+            <p class="no-results-text">Sorry, but no recipes were found matching your filters.</p> -->
+        </div>
+      </div>
       <!-- <div class="filters-box-child">
           <svg class="filters-icon-heart">
               <use href="../img/symbol-defs.svg#icon-heart"></use>
