--- a/src/partials/hero-home.html
+++ b/src/partials/hero-home.html
@@ -33,6 +33,6 @@
             </div>
 
         </div>
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination hero-container"></div>
     </div>
 </div>
