--- a/src/css/favorit-images.css
+++ b/src/css/favorit-images.css
@@ -8,23 +8,19 @@
   --trans: 250ms linear;
   --dark-boody-bg: #161616;
   --dark-description-font-color: rgba(255, 255, 255, 0.8);
-
-  /**                         Gallary                 */
-
-  --gap: 24px;
-  --carts: 1;
 }
-
-/**                     Components                   */
 
 .categories-gallery {
   display: flex;
-  flex-wrap: wrap;
-  gap: var(--gap);
+  flex-direction: column;
+  gap: 24px;
 }
 
 .grid-item {
-  flex-basis: calc((100% - (var(--carts) - 1) * var(--gap)) / var(--carts));
+  width: 335px;
+  height: 335px;
+  padding: 16px;
+  border-radius: 8px;
 }
 
 .favorit-btns {
@@ -71,9 +67,22 @@
   background: rgba(5, 5, 5, 0.18);
 }
 
-.recipe-card {
-  width: 300px;
-  height: 350px;
+.favorit-gallary-null {
+  margin-top: 64px;
+  margin: auto;
+  text-align: center;
+}
+
+.icon-nothing {
+  margin-bottom: 24px;
+  width: 68px;
+  height: 58px;
+}
+
+.text-nothing {
+  margin: 0 auto;
+  text-align: center;
+  max-width: 335px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -95,17 +104,35 @@
   .categories-btn-pn {
     gap: 15px;
   }
-}
 
-.categories-gallery {
-  --gap: 16px;
-  --carts: 3;
-}
-
-@media only screen and (min-width: 1200px) {
   .categories-gallery {
-    --gap: 16px;
-    --carts: 4;
-    row-gap: 32px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+
+  .grid-item {
+    width: 224px;
+    height: 244px;
+  }
+
+  .favorit-gallary-null {
+    margin-top: 64px;
+  }
+
+  .icon-nothing {
+    margin-bottom: 32px;
+    width: 97px;
+    height: 83px;
+  }
+
+  .text-nothing {
+    max-width: 481px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .grid-item {
+    width: 258px;
+    height: 287px;
   }
 }
