--- a/src/partials/favorit-images.html
+++ b/src/partials/favorit-images.html
@@ -1,9 +1,21 @@
-<section class="container favorit-btns">
+<section class="container favorit-gallary-full favorit-btns">
     <button type="button" class="btn main-btn">All categories</button>
     <div class="categories-btn-pn">
     </div>
 </section>
-<section class="container favorit-gallary">
+<section class="container favorit-gallary-full favorit-gallary">
     <ul class="categories-gallery">
     </ul>
+</section>
+<section class="container favorit-gallary-null" hidden>
+
+    <svg class="icon-nothing">
+        <use href="../img/symbol-defs.svg#icon-nothing"></use>
+    </svg>
+    <p class="text-nothing">It appears that you haven't added any recipes to your favorites yet. To get started, you
+        can add recipes that
+        you like
+        to your favorites for easier access in the future.</p>
+
+
 </section>
