--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -57,6 +57,7 @@
             </svg>
             <p class="no-results-text">Sorry, but no recipes were found matching your filters.</p> -->
         </div>
+        <div id="tui-pagination-container" class="tui-pagination"></div>
       </div>
       <!-- <div class="filters-box-child">
           <svg class="filters-icon-heart">
