--- a/src/partials/hero-home.html
+++ b/src/partials/hero-home.html
@@ -1,38 +1,10 @@
 <div class="container hero-container">
-    <div class="hero-cont-text">
-        <h1 class="hero-heading">Learn to Cook <span class="hero-span">Tasty Treats'</span> Customizable Masterclass</h1>
-        <p class="hero-text">TastyTreats - Customize Your Meal with Ingredient Options and Step-by-Step Video Guides.</p>
-        <button class="hero-btn" type="button">Order now</button>
-    </div>
-
-    <div class="hero-slider swiper-container">
-        <div class="swiper-wrapper">
-            <div class="img-slider swiper-slide">
-                <div class="image-slider_image"><img src="" alt="swiper-img" class="foto-slider"></div>
-                <div class="image-slider_image">
-                    <img src="" alt="swiper-img" class="preview-slider">
-                    <p class="textOnImageTS"></p>
-                    <p class="mealOriginTS"></p></div>
-                <div class="image-slider_image"><img src="" alt="swiper-img" class="meal-slider"></div>
-            </div>
-            <div class="img-slider swiper-slide">
-                <div class="image-slider_image"><img src="" alt="swiper-img" class="foto-slider"></div>
-                <div class="image-slider_image">
-                    <img src="" alt="swiper-img" class="preview-slider">
-                    <p class="textOnImageTS"></p>
-                    <p class="mealOriginTS"></p></div>
-                <div class="image-slider_image"><img src="" alt="swiper-img" class="meal-slider"></div>
-            </div>
-            <div class="img-slider swiper-slide">
-                <div class="image-slider_image"><img src="" alt="swiper-img" class="foto-slider"></div>
-                <div class="image-slider_image">
-                    <img src="" alt="swiper-img" class="preview-slider">
-                    <p class="textOnImageTS"></p>
-                    <p class="mealOriginTS"></p></div>
-                <div class="image-slider_image"><img src="" alt="swiper-img" class="meal-slider"></div>
-            </div>
-
-        </div>
-        <div class="swiper-pagination hero-container"></div>
-    </div>
-</div>
+    <div class="hero-cont-text"><h1 class="hero-heading">Learn to Cook <span class="hero-span">Tasty Treats'</span>  Customizable Masterclass</h1>
+    <p class="hero-text">TastyTreats - Customize Your Meal with Ingredient Options and Step-by-Step Video Guides.</p>
+    <button class="hero-btn" type="button" >Order now</button></div>
+    
+  <div class="hero-slider swiper-container">
+      <div class="swiper-wrapper">
+      </div>
+      <div class="swiper-pagination"></div>
+    </div></div>
