--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -10,6 +10,7 @@
       <div class="filters-box-time-area">
       <label class="filters-label-time" for="time"><span class="filters-span-time">Time</span>
           <select class="filters-select-time" name="time" id="time">
+            <option value="Select time">Select time</option>
               <option value="5">5 min</option>
   <option value="10">10 min</option>
   <option value="15">15 min</option>
@@ -37,11 +38,15 @@
           </select>
       </label>
       <label class="filters-label-area" for="area"><span class="filters-span-area">Area</span>
-          <select class="filters-select-area" name="area" id="area"></select>
+          <select class="filters-select-area" name="area" id="area">
+            <option value="Select area">Select area</option>
+          </select>
       </label>
   </div>
       <label class="filters-label-ingredients" for="ingredients"><span class="filters-span-ingredients">Ingredients</span>
-          <select class="filters-select-ingredients" name="ingredients" id="ingredients"></select>
+          <select class="filters-select-ingredients" name="ingredients" id="ingredients">
+            <option value="Select ingedients">Select ingedients</option>
+          </select>
       </label>
      
   </form>
@@ -50,15 +55,17 @@
        <button class="filters-reset-btn"><svg class="filters-icon-reset">
           <use href="../img/symbol-defs.svg#icon-cross"></use>
       </svg><span class="filters-btn-span">Reset the filter</span></button>
+      <div class="no-results">
+        <svg class="no-results-icon">
+            <use href="./img/symbol-defs.svg#icon-nothing"></use>
+        </svg>
+        <p class="no-results-text">Sorry, but no recipes were found matching your filters. Please select other filters</p>
+    </div>
       <div class="filters-box-parent">
-        <!-- <div class="no-results">
-            <svg class="no-results-icon">
-                <use href="./img/symbol-defs.svg#icon-nothing"></use>
-            </svg>
-            <p class="no-results-text">Sorry, but no recipes were found matching your filters.</p> -->
+       
         </div>
         <div id="tui-pagination-container" class="tui-pagination"></div>
-      </div>
+      
       <!-- <div class="filters-box-child">
           <svg class="filters-icon-heart">
               <use href="../img/symbol-defs.svg#icon-heart"></use>
