--- a/src/partials/modal-recipe.html
+++ b/src/partials/modal-recipe.html
@@ -2,7 +2,7 @@
   <div class="modal-recipe">
     <button class="ab-exit-btn">
       <svg class="ab-exit-img">
-        <use href="../img/symbol-defs.svg#icon-cross"></use>
+        <use href="./img/symbol-defs.svg#icon-cross"></use>
       </svg>
     </button>
 
@@ -27,23 +27,23 @@
 
         <div class="ab-star-container">
           <svg class="ab-star-rating-img" fill="rgba(5, 5, 5, 0.5)">
-            <use href="../img/symbol-defs.svg#icon-star"></use>
+            <use href="./img/symbol-defs.svg#icon-star"></use>
           </svg>
 
           <svg class="ab-star-rating-img" fill="rgba(5, 5, 5, 0.5)">
-            <use href="../img/symbol-defs.svg#icon-star"></use>
+            <use href="./img/symbol-defs.svg#icon-star"></use>
           </svg>
 
           <svg class="ab-star-rating-img" fill="rgba(5, 5, 5, 0.5)">
-            <use href="../img/symbol-defs.svg#icon-star"></use>
+            <use href="./img/symbol-defs.svg#icon-star"></use>
           </svg>
 
           <svg class="ab-star-rating-img" fill="rgba(5, 5, 5, 0.5)">
-            <use href="../img/symbol-defs.svg#icon-star"></use>
+            <use href="./img/symbol-defs.svg#icon-star"></use>
           </svg>
 
           <svg class="ab-star-rating-img" fill="rgba(5, 5, 5, 0.5)">
-            <use href="../img/symbol-defs.svg#icon-star"></use>
+            <use href="./img/symbol-defs.svg#icon-star"></use>
           </svg>
         </div>
       </div>
