--- a/src/css/filters.css
+++ b/src/css/filters.css
@@ -321,6 +321,67 @@ line-height: 1.28; /* 128.571% */
 /* .filters-box-parent .filters-box-child:nth-child(n + 7) {
   display: none;
 } */
+.tui-pagination .tui-first,
+.tui-pagination .tui-first+.tui-prev,
+.tui-page-btn + .tui-last,
+.tui-pagination .tui-next {
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+}
+.tui-pagination .tui-first, .tui-pagination .tui-prev, .tui-pagination .tui-next, .tui-pagination .tui-last, .tui-pagination .tui-prev-is-ellip, .tui-pagination .tui-next-is-ellip {
+  width: 44px !important;
+  height: 44px !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+
+.tui-pagination .tui-first-child.tui-is-selected {
+  background-color: var(--accent-color);
+  border: none;
+  border-left: unset;
+  color: #050505;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  /* display: block;
+  align-items: center;
+  justify-content: center; */
+}
+.tui-pagination .tui-next {
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  
+}
+.tui-page-btn *{
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  background-color: var(--boody-bg);
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  /* display: flex !important; */
+  align-items: center !important;
+  justify-content: center !important;
+ 
+}
+.tui-pagination .tui-page-btn {
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  
+}
+.tui-page-btn.tui-is-disabled{
+  background-color: #050505;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  
+}
 
 @media screen and (min-width: 768px) {
   /* .filters-box-parent .filters-box-child:nth-child(n + 7) {
