--- a/src/partials/favorit-images.html
+++ b/src/partials/favorit-images.html
@@ -10,7 +10,7 @@
 <section class="container favorit-gallary-null" hidden>
 
     <svg class="icon-nothing">
-        <use href="../img/symbol-defs.svg#icon-nothing"></use>
+        <use href="./img/symbol-defs.svg#icon-nothing"></use>
     </svg>
     <p class="text-nothing">It appears that you haven't added any recipes to your favorites yet. To get started, you
         can add recipes that
