--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -3,7 +3,7 @@
   <form class="filters-form" action="">
       <label class="filters-label-search" for="search"><span class="filters-span-search">Search</span>
           <svg class="filters-icon" width="18" height="18">
-              <use href="../img/symbol-defs.svg#icon-search"></use>
+              <use href="./img/symbol-defs.svg#icon-search"></use>
           </svg>
           <input class="filters-input" type="text" id="search" name="search" placeholder="Enter Text">
       </label>
@@ -53,7 +53,7 @@
 
   <div class="filters-dox-cards">
        <button class="filters-reset-btn"><svg class="filters-icon-reset">
-          <use href="../img/symbol-defs.svg#icon-cross"></use>
+          <use href="./img/symbol-defs.svg#icon-cross"></use>
       </svg><span class="filters-btn-span">Reset the filter</span></button>
       <div class="no-results">
         <svg class="no-results-icon">
@@ -65,33 +65,6 @@
        
         </div>
         <div id="tui-pagination-container" class="tui-pagination"></div>
-      
-      <!-- <div class="filters-box-child">
-          <svg class="filters-icon-heart">
-              <use href="../img/symbol-defs.svg#icon-heart"></use>
-          </svg>
-          <h2 class="filters-title-recipe"></h2>
-          <p class="filters-description-recipe"></p>
-          <div class="filters-rating-wrap">
-          <p class="filters-rating-recipe"></p>
-          <svg class="filters-icon-rating-recipe-1">
-              <use href="../img/symbol-defs.svg#icon-star"></use>
-          </svg>
-          <svg class="filters-icon-rating-recipe-2">
-              <use href="../img/symbol-defs.svg#icon-star"></use>
-          </svg>
-          <svg class="filters-icon-rating-recipe-3">
-              <use href="../img/symbol-defs.svg#icon-star"></use>
-          </svg>
-          <svg class="filters-icon-rating-recipe-4">
-              <use href="../img/symbol-defs.svg#icon-star"></use>
-          </svg>
-          <svg class="filters-icon-rating-recipe-5">
-              <use href="../img/symbol-defs.svg#icon-star"></use>
-          </svg>
-          <button class="filters-btn-recipe" type="button">See recipe</button>
-      </div>
-      </div> -->
   </div>
 </div>
 </div>
