--- a/src/partials/modal-order.html
+++ b/src/partials/modal-order.html
@@ -1,7 +1,7 @@
 <div class="modal">
   <button type="button" class="modal-button-close" data-modal-close>
     <svg class="modal-button-close-svg" width="24" height="24">
-      <use href="../img/symbol-defs.svg#icon-cross"></use>
+      <use href="./img/symbol-defs.svg#icon-cross"></use>
     </svg>
   </button>
 
