--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -61,11 +61,15 @@
         </svg>
         <p class="no-results-text">Sorry, but no recipes were found matching your filters. Please select other filters</p>
     </div>
+    <span class="loader"></span>
       <div class="filters-box-parent">
        
         </div>
         
   </div>
+  
   <div id="tui-pagination-container" class="tui-pagination"></div>
+  
+  
 </div>
 </div>
