--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,10 +2,10 @@
     <div class="header">
       <ul class="nav-header-list">
         <li class="header-nav">
-      <a class="header-link-nav" href="./index.html">Home</a>
+      <a class="header-link-nav header-link-home" href="./index.html">Home</a>
         </li>
         <li class="header-nav">
-          <a class="header-link-nav" href="./favorites.html">Favorites</a>
+          <a class="header-link-na header-link-favorites" href="./favorites.html">Favorites</a>
         </li>
       </ul>
     <a class="header-logo" href="./index.html"><span class="header-logo-acent">tasty</span>treats.</a>
@@ -38,10 +38,10 @@
               </button>
     <ul class="list icon-mobile-menu">
       <li class="mobile-menu-home">
-<a href="./index.html">Home</a>
+<a class="header-link-home" href="./index.html">Home</a>
       </li>
       <li class="mobile-menu-favorites">
-        <a href="./favorites.html">Favorites</a>
+        <a class="header-link-favorites" href="./favorites.html">Favorites</a>
       </li>
     </ul>
     <label class="checkbox-ios">
